--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,11 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+flask = "*"
+flask-cors = "*"
+opencv-python = "*"
+sklearn = "*"
+numpy = "*"
 
 [requires]
 python_version = "3.7"
